# bum

./: .dockerignore  .gitignore  .npmignore  AGENTS.md  Allow copy on hover install command  Cargo.toml  README.md  bin.js  bin.ts  build.rs  default-cli.txt  e2e-test-npm-install.sh  e2e-test.sh  e2e-visualization.html  index.d.ts  index.js  install.sh  package-lock.json  package.json  test-npm.sh  tsconfig.json
.docs/: bum-quick-demo.gif:Zone.Identifier
.github/workflows/: ci.yml  cicd.yml  deploy-pages.yml  deploy.yml  rust.yml
docs/: CONTRIBUTING.md  RELEASE.md  index.html  script.js  styles.css
e2e/: Dockerfile  Dockerfile.npm-install  run-npm-install-test.sh  test-container.sh  test-npm-install.sh  test-npm.sh  test.sh  visualization.html
npm/darwin-arm64/: package.json
npm/darwin-universal/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-x64-msvc/: package.json
src/: bun.rs  commands.rs  lib.rs  main.rs  os.rs  utils.rs
src/utils/: command.rs  install.rs  mod.rs  utils.rs
technical-docs/: RELEASE.md
tests/: npm_integration.rs
