[package]
name = "bum"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
zip = "1.1"
owo-colors = "4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
resolve-path = "0.1"
lazy_static = "1.4"
anyhow = "1.0"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }
[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }
