[package]
name = "bum"
version = "0.6.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bum"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = "2.16"
napi-derive = "2.16"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
zip = "1.1"
owo-colors = "4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
resolve-path = "0.1"
lazy_static = "1.4"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
futures = "0.3"

[build-dependencies]
napi-build = "2.1.3"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
