[package]
name = "bum"
version = "0.7.9"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bum"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = "2.16"
napi-derive = "2.16"
# Use rustls instead of native-tls to avoid OpenSSL cross-compilation issues
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
# Disable default features to avoid libz-ng-sys which has cross-compilation issues
zip = { version = "1.1", default-features = false, features = ["deflate"] }
owo-colors = "4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
resolve-path = "0.1"
lazy_static = "1.4"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
futures = "0.3"

[build-dependencies]
napi-build = "2.1.3"
